--- a/basic-internal.html
+++ b/basic-internal.html
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
     <!--Favicon added-->
-    <link rel="icon" href="images/favicon.ico" type="image/ico">
+     <link rel="icon" type="image/png" href="/images/favicon.ico" sizes="16x16">
 
 
     <!-- Google web fonts. -->
